add go client example
Signed-off-by: Brandon Tuttle <tuttlebr@ncc-1701.biz>

--- a/workspace/t5_client_demo.ipynb
+++ b/workspace/t5_client_demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8d15d781-9f77-4b4d-b42b-0864991c8fc0",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "abbfd65a-4348-4cbc-93c9-0a6af357c65b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "24316ffd-9529-4277-85b3-8db23ce00029",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "48c094f0-697b-476e-b744-affe079be0ec",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "94da6309-9853-444b-8220-8d1ee622a045",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e900f05c-9836-4c4e-8ca9-e59ec91c9e3a",
    "metadata": {},
    "outputs": [],
@@ -161,18 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ebe732c6-11a4-4441-b0ad-b3d4ef43bd84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "carbon monoxide\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = \"question: What does increased oxygen concentrations in the patient’s lungs displace? \\\n",
     "        context: Hyperbaric (high-pressure) medicine uses specialoxygen chambers to increase the partial pressure \\\n",
@@ -197,18 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a12c32cb-788c-47c1-8adf-1d16d4f8aa4c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "transfer learning has emerged as a powerful technique in natural language processing (NLP) in this paper, we introduce a unified framework that converts all text-based language problems into a text-to-text format. we then train a model on the text-to-text format and apply it to the problem of predicting the meaning of a sentence.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = \"summarize: Transfer learning, where a model is first pre-trained on a data-rich task \\\n",
     "        before being fine-tuned on a downstream task, has emerged as a powerful technique in natural language \\\n",
@@ -230,18 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d1f00982-078c-4024-b2ea-e52c6684fc40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Er schwenkte den Angelstab zurück und stieß die Angel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = \"Translate English to German: He swung back the fishing pole and cast the line.\"\n",
     "inputs = preprocess(text, grpc=GRPC)\n",
@@ -251,7 +227,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "e56cf06c-bb24-4f0b-b5cf-ad5dd8747cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.as_numpy(\"output_ids\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1dea49-62c4-40f0-833e-0a5384dc9aad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.as_numpy(\"sequence_length\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b149c74d-4307-4ecf-a755-aacf2ca5b6b0",
    "metadata": {},
    "outputs": [],
@@ -261,58 +257,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c2ff481c-cd27-48fd-8cb8-436722887b08",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[30355,    15,  1566,    12,  2968,    10,   216,     3,     7,\n",
-       "           210,   425,   223,     8,  5095, 11148,    11,  4061,     8,\n",
-       "           689,     5,     1]], dtype=uint32),\n",
-       " array([[21]], dtype=uint32),\n",
-       " array([[128]], dtype=uint32),\n",
-       " array([[1]], dtype=uint32))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_ids, mem_seq_len, max_output_len, runtime_top_k "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "27df7584-630b-4f1a-bdcf-a13c8bfc8866",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1, 21), (1, 1), (1, 1), (1, 1))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_ids.shape, mem_seq_len.shape, max_output_len.shape, runtime_top_k .shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ec9c70a-3591-4a0c-9ac9-215ac4c2ffca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
