--- a/workspace/t5_client_demo.ipynb
+++ b/workspace/t5_client_demo.ipynb
@@ -161,6 +161,27 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "aa40b100-d3ad-474d-8a77-ec6ee9643438",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "France\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"question: What country is Paris located?\"\n",
+    "inputs = preprocess(text, grpc=GRPC)\n",
+    "result = client.infer(MODEl_T5_FASTERTRANSFORMER, inputs)\n",
+    "postprocess(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "ebe732c6-11a4-4441-b0ad-b3d4ef43bd84",
    "metadata": {},
    "outputs": [
@@ -196,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a12c32cb-788c-47c1-8adf-1d16d4f8aa4c",
    "metadata": {},
    "outputs": [
@@ -229,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d1f00982-078c-4024-b2ea-e52c6684fc40",
    "metadata": {},
    "outputs": [
@@ -258,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "22ecff94-46fd-4527-ba37-e3375d52ef80",
    "metadata": {},
    "outputs": [],
@@ -296,468 +317,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "455222d5-0382-44ae-a24c-9377e3876651",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"data\": [\n",
-      "        {\n",
-      "            \"input_ids\": {\n",
-      "                \"content\": [\n",
-      "                    30355,\n",
-      "                    15,\n",
-      "                    1566,\n",
-      "                    12,\n",
-      "                    2968,\n",
-      "                    10,\n",
-      "                    216,\n",
-      "                    3,\n",
-      "                    7,\n",
-      "                    210,\n",
-      "                    425,\n",
-      "                    223,\n",
-      "                    8,\n",
-      "                    5095,\n",
-      "                    11148,\n",
-      "                    11,\n",
-      "                    4061,\n",
-      "                    8,\n",
-      "                    689,\n",
-      "                    5,\n",
-      "                    1\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    21\n",
-      "                ]\n",
-      "            },\n",
-      "            \"sequence_length\": {\n",
-      "                \"content\": [\n",
-      "                    21\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            },\n",
-      "            \"max_output_len\": {\n",
-      "                \"content\": [\n",
-      "                    128\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            },\n",
-      "            \"runtime_top_k\": {\n",
-      "                \"content\": [\n",
-      "                    1\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            }\n",
-      "        },\n",
-      "        {\n",
-      "            \"input_ids\": {\n",
-      "                \"content\": [\n",
-      "                    21603,\n",
-      "                    10,\n",
-      "                    9900,\n",
-      "                    1036,\n",
-      "                    6,\n",
-      "                    213,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    825,\n",
-      "                    19,\n",
-      "                    166,\n",
-      "                    554,\n",
-      "                    18,\n",
-      "                    17,\n",
-      "                    10761,\n",
-      "                    30,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    331,\n",
-      "                    18,\n",
-      "                    3723,\n",
-      "                    2491,\n",
-      "                    274,\n",
-      "                    271,\n",
-      "                    1399,\n",
-      "                    18,\n",
-      "                    17,\n",
-      "                    444,\n",
-      "                    26,\n",
-      "                    30,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    26804,\n",
-      "                    2491,\n",
-      "                    6,\n",
-      "                    65,\n",
-      "                    13999,\n",
-      "                    38,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    2021,\n",
-      "                    3317,\n",
-      "                    16,\n",
-      "                    793,\n",
-      "                    1612,\n",
-      "                    3026,\n",
-      "                    41,\n",
-      "                    567,\n",
-      "                    6892,\n",
-      "                    137,\n",
-      "                    37,\n",
-      "                    9570,\n",
-      "                    13,\n",
-      "                    2025,\n",
-      "                    1036,\n",
-      "                    65,\n",
-      "                    787,\n",
-      "                    3098,\n",
-      "                    12,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    7322,\n",
-      "                    13,\n",
-      "                    6315,\n",
-      "                    6,\n",
-      "                    15663,\n",
-      "                    6,\n",
-      "                    11,\n",
-      "                    1032,\n",
-      "                    5,\n",
-      "                    86,\n",
-      "                    48,\n",
-      "                    1040,\n",
-      "                    6,\n",
-      "                    62,\n",
-      "                    2075,\n",
-      "                    8,\n",
-      "                    3283,\n",
-      "                    13,\n",
-      "                    2025,\n",
-      "                    1036,\n",
-      "                    2097,\n",
-      "                    21,\n",
-      "                    445,\n",
-      "                    6892,\n",
-      "                    57,\n",
-      "                    3,\n",
-      "                    13505,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    3,\n",
-      "                    22927,\n",
-      "                    4732,\n",
-      "                    24,\n",
-      "                    5755,\n",
-      "                    7,\n",
-      "                    66,\n",
-      "                    1499,\n",
-      "                    18,\n",
-      "                    390,\n",
-      "                    1612,\n",
-      "                    982,\n",
-      "                    139,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    1499,\n",
-      "                    18,\n",
-      "                    235,\n",
-      "                    18,\n",
-      "                    6327,\n",
-      "                    1910,\n",
-      "                    1\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    112\n",
-      "                ]\n",
-      "            },\n",
-      "            \"sequence_length\": {\n",
-      "                \"content\": [\n",
-      "                    112\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            },\n",
-      "            \"max_output_len\": {\n",
-      "                \"content\": [\n",
-      "                    128\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            },\n",
-      "            \"runtime_top_k\": {\n",
-      "                \"content\": [\n",
-      "                    1\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            }\n",
-      "        },\n",
-      "        {\n",
-      "            \"input_ids\": {\n",
-      "                \"content\": [\n",
-      "                    822,\n",
-      "                    10,\n",
-      "                    363,\n",
-      "                    405,\n",
-      "                    1936,\n",
-      "                    11035,\n",
-      "                    6145,\n",
-      "                    7,\n",
-      "                    16,\n",
-      "                    8,\n",
-      "                    1868,\n",
-      "                    22,\n",
-      "                    7,\n",
-      "                    3,\n",
-      "                    17454,\n",
-      "                    1028,\n",
-      "                    4687,\n",
-      "                    58,\n",
-      "                    2625,\n",
-      "                    10,\n",
-      "                    15889,\n",
-      "                    1047,\n",
-      "                    447,\n",
-      "                    41,\n",
-      "                    6739,\n",
-      "                    18,\n",
-      "                    26866,\n",
-      "                    61,\n",
-      "                    4404,\n",
-      "                    2284,\n",
-      "                    534,\n",
-      "                    9773,\n",
-      "                    729,\n",
-      "                    10751,\n",
-      "                    7,\n",
-      "                    12,\n",
-      "                    993,\n",
-      "                    8,\n",
-      "                    11807,\n",
-      "                    1666,\n",
-      "                    13,\n",
-      "                    411,\n",
-      "                    204,\n",
-      "                    300,\n",
-      "                    8,\n",
-      "                    1868,\n",
-      "                    232,\n",
-      "                    6,\n",
-      "                    116,\n",
-      "                    906,\n",
-      "                    6,\n",
-      "                    8,\n",
-      "                    1035,\n",
-      "                    871,\n",
-      "                    5,\n",
-      "                    14335,\n",
-      "                    1911,\n",
-      "                    6778,\n",
-      "                    15,\n",
-      "                    14566,\n",
-      "                    53,\n",
-      "                    6,\n",
-      "                    1807,\n",
-      "                    3,\n",
-      "                    3810,\n",
-      "                    1536,\n",
-      "                    15,\n",
-      "                    6,\n",
-      "                    232,\n",
-      "                    20,\n",
-      "                    287,\n",
-      "                    8243,\n",
-      "                    24117,\n",
-      "                    41,\n",
-      "                    532,\n",
-      "                    3,\n",
-      "                    22,\n",
-      "                    115,\n",
-      "                    989,\n",
-      "                    7,\n",
-      "                    22,\n",
-      "                    61,\n",
-      "                    33,\n",
-      "                    1664,\n",
-      "                    4260,\n",
-      "                    338,\n",
-      "                    175,\n",
-      "                    9776,\n",
-      "                    867,\n",
-      "                    7,\n",
-      "                    5,\n",
-      "                    18840,\n",
-      "                    26,\n",
-      "                    411,\n",
-      "                    204,\n",
-      "                    6145,\n",
-      "                    16,\n",
-      "                    8,\n",
-      "                    3,\n",
-      "                    17454,\n",
-      "                    1691,\n",
-      "                    12,\n",
-      "                    1028,\n",
-      "                    4687,\n",
-      "                    4146,\n",
-      "                    1911,\n",
-      "                    6778,\n",
-      "                    15,\n",
-      "                    45,\n",
-      "                    8,\n",
-      "                    3,\n",
-      "                    6015,\n",
-      "                    15,\n",
-      "                    563,\n",
-      "                    13,\n",
-      "                    24731,\n",
-      "                    14063,\n",
-      "                    77,\n",
-      "                    5,\n",
-      "                    20919,\n",
-      "                    63,\n",
-      "                    729,\n",
-      "                    1807,\n",
-      "                    19,\n",
-      "                    14566,\n",
-      "                    1162,\n",
-      "                    12,\n",
-      "                    8,\n",
-      "                    152,\n",
-      "                    9,\n",
-      "                    49,\n",
-      "                    32,\n",
-      "                    15979,\n",
-      "                    8710,\n",
-      "                    24,\n",
-      "                    1137,\n",
-      "                    1807,\n",
-      "                    3,\n",
-      "                    3810,\n",
-      "                    1536,\n",
-      "                    15,\n",
-      "                    6,\n",
-      "                    78,\n",
-      "                    3094,\n",
-      "                    165,\n",
-      "                    11807,\n",
-      "                    1666,\n",
-      "                    15061,\n",
-      "                    7,\n",
-      "                    5781,\n",
-      "                    135,\n",
-      "                    5,\n",
-      "                    374,\n",
-      "                    287,\n",
-      "                    8243,\n",
-      "                    24117,\n",
-      "                    6986,\n",
-      "                    16,\n",
-      "                    6558,\n",
-      "                    113,\n",
-      "                    20,\n",
-      "                    287,\n",
-      "                    4715,\n",
-      "                    396,\n",
-      "                    1169,\n",
-      "                    2406,\n",
-      "                    120,\n",
-      "                    227,\n",
-      "                    3,\n",
-      "                    9,\n",
-      "                    10026,\n",
-      "                    6,\n",
-      "                    3,\n",
-      "                    5490,\n",
-      "                    16,\n",
-      "                    11144,\n",
-      "                    7,\n",
-      "                    13,\n",
-      "                    16,\n",
-      "                    49,\n",
-      "                    17,\n",
-      "                    1807,\n",
-      "                    6,\n",
-      "                    3323,\n",
-      "                    23383,\n",
-      "                    11,\n",
-      "                    17801,\n",
-      "                    440,\n",
-      "                    6,\n",
-      "                    3,\n",
-      "                    10454,\n",
-      "                    16,\n",
-      "                    70,\n",
-      "                    1717,\n",
-      "                    5,\n",
-      "                    3,\n",
-      "                    31372,\n",
-      "                    8,\n",
-      "                    1666,\n",
-      "                    13,\n",
-      "                    411,\n",
-      "                    204,\n",
-      "                    38,\n",
-      "                    1116,\n",
-      "                    38,\n",
-      "                    2748,\n",
-      "                    7,\n",
-      "                    2317,\n",
-      "                    19,\n",
-      "                    294,\n",
-      "                    13,\n",
-      "                    8,\n",
-      "                    1058,\n",
-      "                    5,\n",
-      "                    1\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    215\n",
-      "                ]\n",
-      "            },\n",
-      "            \"sequence_length\": {\n",
-      "                \"content\": [\n",
-      "                    215\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            },\n",
-      "            \"max_output_len\": {\n",
-      "                \"content\": [\n",
-      "                    128\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            },\n",
-      "            \"runtime_top_k\": {\n",
-      "                \"content\": [\n",
-      "                    1\n",
-      "                ],\n",
-      "                \"shape\": [\n",
-      "                    1\n",
-      "                ]\n",
-      "            }\n",
-      "        }\n",
-      "    ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "texts = [\"Translate English to German: He swung back the fishing pole and cast the line.\",\n",
     "         \"summarize: Transfer learning, where a model is first pre-trained on a data-rich task \\\n",
@@ -765,6 +328,7 @@
     "         processing (NLP). The effectiveness of transfer learning has given rise to a diversity of approaches, \\\n",
     "         methodology, and practice. In this paper, we explore the landscape of transfer learning techniques for NLP \\\n",
     "         by introducing a unified framework that converts all text-based language problems into a text-to-text format\",\n",
+    "         \"question: What country is Paris located?\", \n",
     "         \"question: What does increased oxygen concentrations in the patient’s lungs displace? \\\n",
     "         context: Hyperbaric (high-pressure) medicine uses specialoxygen chambers to increase the partial pressure \\\n",
     "         of O 2 around the patientand, when needed, the medical staff. Carbon monoxide poisoning, \\\n",
@@ -776,18 +340,9 @@
     "        ]\n",
     "\n",
     "perf_analyzer_input = create_data_input(texts)\n",
-    "print(json.dumps(perf_analyzer_input, indent=4))\n",
     "with open(\"perf_analyzer_data.json\", \"w\") as f:\n",
     "    json.dump(perf_analyzer_input, f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d48a9c95-2b2b-4a19-9f5b-f36a253be141",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
